@@ -29,3 +29,8 @@
 2011-02-03  Sebastian Dransfeld
 
         * Fix leak in efreet_mime_type_icon_get()
+
+2011-02-05  Sebastian Dransfeld
+
+        * Remove global log domain and make all files define log domain
+          before including efreet_private.h
